# indexed_sum

./: .gitignore  README.md  pyproject.toml
examples/: mass_spring.py  multiple_terms.py  neohookean_elasticity.py
indexed_sum/: __init__.py  indexed_sum.py
tests/: test_all.py
